Fix invisible dropdowns again
Add `!important` to `display: none`

--- a/css/styles.css
+++ b/css/styles.css
@@ -132,15 +132,13 @@ p {
 	vertical-align: top;
 	margin-top: 1vmax;
 	background: var(--bg);
-	pointer-events: none;
 	z-index: 2;
 	flex-direction: column;
-	display: none;
+	display: none !important;
 	opacity: 0;
 	transition: opacity .2s;
 }
 .dropdown:hover ul, .dropdown ul:hover {
 	opacity: 1;
-	display: block;
-	pointer-events: auto;
+	display: flex !important;
 }
